# cutline

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  README_ZH.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  release-source.yml
docs/superpowers/plans/: 2026-07-22-flask-local-web-cross-platform-github.md  2026-07-22-model-runtime-management.md
requirements/: base.txt  cpu.txt  dev.txt  linux-cuda.txt
rmbg_onnx_runner/: README.md  check_env.py  install_windows.ps1  model_manager.py  model_worker.py  requirements-win-gpu.txt  resource_diagnostics.py  rmbg_onnx.py  run_rmbg_onnx.py  runtime.py  runtime_preferences.py  task_service.py  web_app.py
rmbg_onnx_runner/tests/: test_model_manager.py  test_model_worker.py  test_repository.py  test_resource_diagnostics.py  test_rmbg_onnx.py  test_runtime.py  test_runtime_preferences.py  test_task_service.py  test_web_app.py  test_web_assets.py
rmbg_onnx_runner/web/: app.js  index.html  style.css
scripts/: install_linux.sh  install_macos.sh  install_windows.ps1  start_linux.sh  start_macos.sh  start_windows.ps1
